# joserfc

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-docs.txt  requirements.txt  serve.py  setup.py  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: docs.yml  pypi.yml  test.yml
docs/: Makefile  api.rst  build.py  changelog.rst  conf.py  index.rst  install.rst  requirements.txt  security.rst  sponsors.rst  stability.rst
docs/_static/: custom.css
docs/api/: errors.rst  index.rst  jwe.rst  jwk.rst  jws.rst  jwt.rst
docs/contributing/: authors.rst  index.rst  structure.rst  translation.rst
docs/en/: changelog.rst  conf.py  index.rst  stability.rst
docs/en/_static/: custom.css
docs/en/api/: index.rst  jwe.rst
docs/en/contributing/: commit.rst  index.rst  sponsor.rst  structure.rst
docs/en/guide/: algorithms.rst  index.rst  introduction.rst  jwe.rst  jwk.rst  jws.rst  jwt.rst  quickstart.rst  registry.rst
docs/en/migrations/: authlib.rst  index.rst  pyjwt.rst
docs/en/recipes/: openssl.rst
docs/en/references/: jwk.rst
docs/example/: import.rst
docs/examples/: generate.rst
docs/guide/: algorithms.rst  errors.rst  index.rst  introduction.rst  jwe.rst  jwk.rst  jws.rst  jwt.rst  key-rotation.rst  quickstart.rst  registry.rst
docs/migrations/: authlib.rst  index.rst  pyjwt.rst  python-jose.rst
docs/recipes/: azure.rst  cheatsheet.md  openssl.rst
docs/references/: index.rst  jwe.rst  jws.rst
docs/rfc/: 7515.rst  7516.rst  7517.rst  7518.rst  7519.rst  7520.rst  7638.rst  7797.rst  8037.rst  8812.rst  9278.rst  9864.rst  index.rst
docs/zh-hans/: index.rst
en/dev/: index.html  objects.inv  searchindex.js
en/dev/_static/: documentation_options.js
en/dev/api/: index.html
en/dev/changelog/: index.html
en/dev/contributing/: index.html
en/dev/genindex/: index.html
en/dev/guide/: index.html
en/dev/install/: index.html
en/dev/migrations/: index.html
en/dev/py-modindex/: index.html
en/dev/search/: index.html
en/dev/security/: index.html
en/dev/stability/: index.html
public/: CNAME  index.html  robots.txt
requirements/: base.txt  docs.txt  lint.txt
src/joserfc/: __init__.py  _keys.py  _registry.py  _shared.py  _types.py  _util.py  errors.py  jwa.py  jwe.py  jwk.py  jws.py  jwt.py  registry.py  types.py  util.py
src/joserfc/_rfc7515/: compact.py  json.py  model.py  registry.py  types.py
src/joserfc/_rfc7516/: compact.py  json.py  message.py  models.py  registry.py  types.py
src/joserfc/_rfc7517/: models.py  pem.py  types.py
src/joserfc/_rfc7518/: derive_key.py  ec_key.py  jwe_algs.py  jwe_encs.py  jwe_zips.py  jws_algs.py  oct_key.py  rsa_key.py  util.py
src/joserfc/_rfc7519/: claims.py  registry.py  security.py
src/joserfc/_rfc7638/: __init__.py
src/joserfc/_rfc7797/: compact.py  json.py  util.py
src/joserfc/_rfc8037/: jws_eddsa.py  okp_key.py
src/joserfc/_rfc8812/: __init__.py
src/joserfc/_rfc9278/: __init__.py
src/joserfc/_rfc9864/: __init__.py  jws_eddsa.py
src/joserfc/_types/: headers.py  keys.py
src/joserfc/_util/: encode.py
src/joserfc/drafts/: jwe_chacha20.py  jwe_ecdh_1pu.py
src/joserfc/rfc7515/: __init__.py  alg.py  compact.py  header.py  json.py  model.py  models.py  registry.py  types.py
src/joserfc/rfc7516/: __init__.py  algs.py  compact.py  header.py  json.py  message.py  models.py  registry.py  types.py
src/joserfc/rfc7517/: __init__.py  keygen.py  keys.py  keyset.py  load_pem_key.py  models.py  pem.py  registry.py  types.py
src/joserfc/rfc7518/: derive_key.py  ec_key.py  jwe_algs.py  jwe_encs.py  jwe_zips.py  jws_algs.py  oct_key.py  rsa_key.py  util.py
src/joserfc/rfc7519/: claims.py  registry.py  validators.py
src/joserfc/rfc7638/: __init__.py
src/joserfc/rfc7797/: __init__.py  compact.py  json.py  registry.py
src/joserfc/rfc8037/: jws_eddsa.py  okp_key.py
src/joserfc/rfc8812/: __init__.py
tests/: base.py  requirements.txt  test_util.py  util.py
tests/fixtures/: __init__.py  jwe_compact_ecdh_1pu.json  jwe_rfc7520.json  jws_compact_ec.json  jws_ec.json  jws_examples.json  jws_oct.json  jws_rfc7520.json  jws_rfc7797.json  jws_rsa.json  jwt_oct.json  jwt_rsa.json  jwt_use_jws.json  test_jws.py
tests/jwe/: test_chacha20.py  test_compact.py  test_ecdh_1pu.py  test_errors.py  test_example.py  test_json.py
tests/jwk/: test_ec_key.py  test_jwk_set.py  test_key_methods.py  test_oct_key.py  test_okp_key.py  test_rsa_key.py  util.py
tests/jws/: test_compact.py  test_eddsa.py  test_errors.py  test_examples.py  test_hs.py  test_hs_algs.py  test_json.py  test_registry.py  test_rfc7797.py  test_rs.py
tests/jws/fixtures/: jws_rsa.json
tests/jwt/: test_claims.py  test_fixtures.py  test_jwt.py  test_rsa.py
tests/keys/: RFC7516-A.1.3.json  RFC7516-A.2.3.json  RFC7520-EC-108.json  RFC7520-EC-120.json  RFC7520-RSA-73.json  RFC7520-RSA-84.json  RFC7520-oct-130.json  __init__.py  ec-p256-alice.json  ec-p256-bob.json  ec-p256-private.pem  ec-p256-public.pem  ec-p384-private.pem  ec-p384-public.pem  ec-p512-private.pem  ec-p512-public.pem  ec-p521-private.pem  ec-p521-public.pem  ec-secp256k1-private.pem  ec-secp256k1-public.pem  firebase-cert.pem  okp-ed25519-private.json  okp-ed25519-public.json  okp-ed448-private.pem  okp-ed448-public.pem  okp-x25519-alice.json  okp-x25519-bob.json  okp-x25519-charlie.json  openssl-rsa-private.pem  rsa-openssl-public.pem  ssh-ecdsa-public.pem  ssh-ed25519-public.pem  ssh-rsa-private.pem  ssh-rsa-public.pem
tests/rfc7520/: test_jwe.py  test_jwk.py  test_jws.py
zh/dev/: index.html  objects.inv  searchindex.js
zh/dev/_static/: documentation_options.js
zh/dev/api/: index.html
zh/dev/changelog/: index.html
zh/dev/contributing/: index.html
zh/dev/genindex/: index.html
zh/dev/guide/: index.html
zh/dev/install/: index.html
zh/dev/migrations/: index.html
zh/dev/py-modindex/: index.html
zh/dev/search/: index.html
zh/dev/security/: index.html
(+52 files in other folders)
