[project]
name = "joserfc"
description = "The ultimate Python library for JOSE RFCs, including JWS, JWE, JWK, JWA, JWT"
authors = [{name = "Hsiaoming Yang", email="me@lepture.com"}]
dependencies = [
  "cryptography",
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
dynamic = ["version"]
readme = "README.rst"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
drafts = ["pycryptodome"]

[project.urls]
Documentation = "https://jose.authlib.org/"
Source = "https://github.com/authlib/joserfc"
Funding = "https://github.com/sponsors/authlib"
Blog = "https://blog.authlib.org/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "joserfc.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
joserfc = ["py.typed"]

[dependency-groups]
dev = [
    "pycryptodome",  # for testing drafts
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]
docs = [
    "shibuya",
    "sphinx",
    "sphinx-contributors",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-intl",
    "sphinx-sitemap",
    "sphinx-iconify",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = [
  "error::DeprecationWarning",
  "ignore::UserWarning",
]

[tool.coverage.run]
branch = true
source = ["joserfc"]
omit = [
  "src/joserfc/rfc*/*",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
  "@overload",
  "@t.overload",
]

[tool.mypy]
strict = true
python_version = "3.9"
files = ["src/joserfc"]
show_error_codes = true
pretty = true

[tool.tox]
requires = ["tox>=4.19"]
env_list = [
    "style",
    "py310",
    "py311",
    "py312",
    "py313",
    "docs",
    "coverage",
]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [
    ["pytest", "--showlocals", "--full-trace", "{posargs}"],
]

[tool.tox.env.style]
skip_install = true
commands = [
    ["pre-commit", "run", "--all-files", "--show-diff-on-failure"],
]

[tool.tox.env.docs]
dependency_groups = ["docs"]
commands = [
    ["sphinx-build", "--builder", "html", "--fail-on-warning", "docs", "build/sphinx/html"],
]

[tool.tox.env.coverage]
commands = [
    ["pytest", "--cov", "--cov-report", "term:skip-covered", "--cov-report", "html", "{posargs}"],
]
